--- a/pages/translation/translation.html
+++ b/pages/translation/translation.html
@@ -7,16 +7,10 @@
     <script src="../js/slidereveal.js"></script>
     <script src="../js/mask.js"></script>
     <script src="js/md5.js"></script>
-    <!-- <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/load.css">   
     <link rel="stylesheet" href="css/translation.css">
-    <script>
-        $(window).load(function(){
-            $('body').addClass('loaded');
-            $('#loader-wrapper .load_title').remove();     
-        });
-    </script>
+    <script src="../js/common.js"></script>
 </head>
 <body>
     <div id="loader-wrapper">
@@ -31,7 +25,8 @@
     <!-- 头部图标以及搜索按钮 -->
     <div class="Grid">
         <div class="Grid-cell h-slogan" >
-            <span>Translation</span>
+            <span class="trigger menu"></span>
+            <span class="trigger close"></span>
         </div>
         <div class="Grid-cell h-logo">
             <span class="log"></span>
@@ -42,8 +37,6 @@
     </div>
     
     <!-- 菜单按钮以及侧面菜单 -->
-    <span class="trigger menu"></span>
-    <span class="trigger close"></span>
     <header id="slide">
         <span id="intel_logo"></span>
         <nav>
@@ -66,7 +59,7 @@
     </div>
     <div class="search bar7">
         <form>
-            <input placeholder="请输入您要搜索的内容..." type="text">
+            <input placeholder="请输入您要搜索的内容..." class="s_input" type="text">
                 <button type="submit">
                 </button>
             </input>
@@ -89,25 +82,32 @@
         </div>
     </div>
 
-    <!-- 翻译部分 -->
     <div class="t-mask"></div>
-    <div id="container">
-        <div class="Grid_1">
-            <div class="Grid_1-cell src">
-                <span class="all-fresh"></span>
-                <div class="src-wrap">
-                    <span class="src-close"></span>
-                    <textarea class="src-input" name="translation" id=""  placeholder="输入所需翻译的内容"></textarea>
-                    <button class="src-btn">
-                        Translating
-                    </button>
+    <div class="chat_container">
+        <div class="close_area">
+            <span class="close_icon"></span>
+        </div>
+        <div class="message_pool clearfix">
+            <div class="left clearfix">
+                <span class="left_icon"></span>
+                <div class="left_message">
+                    <div class="lArrow"></div>
+                    Hi, I am your translator(^_^). Please enter Chinese or English and I'll translate for you~~
                 </div>
             </div>
-            <div class="Grid_1-cell dst">
-                <span class="all-close"></span>
-                <div class="dst-wrap">
-                    
+            <!-- <div class="right clearfix">
+                <span class="right_icon"></span>
+                <div class="right_message">
+                    <div class="rArrow"></div>
+                    啦啦啦啦啦啦啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啊啦啦啦啦啦啦啦啦啦啦啦啦啦啦啊啦啦啦啦啦啦啦啦
                 </div>
+            </div> -->
+        </div>
+        <div class="input_container">
+            <textarea name="input_text" id="input_text" placeholder="Please enter English or Chinese..."></textarea>
+            <div class="send_area">
+                <span class="refresh"></span>
+                <button class="send_btn">send</button>
             </div>
         </div>
     </div>
